fix: social media spacing adapted

--- a/src/app/components/header/social-media/social-media.component.scss
+++ b/src/app/components/header/social-media/social-media.component.scss
@@ -6,7 +6,7 @@
     border-radius: 50%;
     background-color: var(--primary-color);
     margin: 0.5rem;
-    margin-top: 5.5rem;
+    margin-top: 5rem;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     
